mcp/0.1/modules/ROOT/pages/index.adoc
= MCP Connector 0.1.0-BETA 
:lc-connector-name: mcp
:uc-connector-name: MCP

Anypoint Connector for MCP (MCP Connector) uses the Model Context Protocol (MCP) to enable AI clients that support MCP to invoke and interact with APIs, connectors, and apps. 

include::connectors::partial$beta-connector-disclaimer.adoc[]

Use MCP Connector to connect LLM applications with your APIs. APIs with complex endpoints can be exposed as simpler, more atomic tools or resources that are better suited for agentic clients. The key is to decide on what is straightforward, repeatable, and optimal for agent actions, and start there.

MCP is an open protocol that enables seamless integration between LLM applications and external data, services, and tools. MCP is a new standard allowing LLM and agent applications to communicate with each other (and with preexisting systems) in a consistent way. 

The MCP protocol: 

* Enhances AI precision by supplying AI with relevant information, leading to more accurate responses. 
* Empowers AI to manage intricate tasks that require access to external data or services.
* Promotes interoperability between AI models and external systems, simplifying integration into workflows.

MCP Connector:

* Makes Mule applications, connectors, and custom APIs available to AI clients, such as Claude, Cursor, and Windsurf, that support MCP. This enables you to rapidly and seamlessly build an agentic interface to expose Mule APIs to these clients.
* Enables you to write Mule apps that can act as both an MCP server and a client. The resulting Mule MCP server runs inside of Mule, which means you don’t need to configure your own hosting environment. Mule has your agentic needs covered end-to-end. 
** Acting as an MCP server, MuleSoft allows AI clients to leverage existing API-led investments, legacy systems, and SaaS applications that don’t natively support MCP.
** Acting as an MCP client, MuleSoft makes it possible to build integrations and orchestrations in which Agents are just another system in the choreography.
* Enables you to introduce AI agents into your existing Enterprise ecosystem using Mule as the orchestration layer. 
This makes the capabilities of your Mule APIs and applications available to a growing ecosystem of AI agents.

For information about compatibility and fixed issues, see the MCP Connector Release Notes.

== Before You Begin

To use this connector, you must be familiar with:

* Anypoint Connectors
* Mule runtime engine (Mule)
* Elements and global elements in a Mule flow
* How to create a Mule app using Anypoint Code Builder or Anypoint Studio

Before creating an app, you must have:

* Java 17
* Apache Maven
* Anypoint Platform
* Credentials to connect with the target resource
* The latest versions of Anypoint Code Builder or Anypoint Studio

== Common Use Cases for the Connector

These are some common use cases for the connector:

* Customer Service
+
Use AI agents to help human agents to be more efficient by handling time-intensive tasks like reviewing case histories, analyzing reported issues, and retrieving relevant information.
* Sales
+
Improve sales teams' success by accelerating prospect research, generating customized collateral, and preparing contracts.
* Marketing
+
Empower marketing teams with AI-driven support for drafting social media content, conducting market research, and analyzing campaign performance.

== Connection Types

* SSE Client
+
Enables MCP Connector to establish a persistent, one-way (server-sent) connection to an MCP server using the Server-Sent Events (SSE) standard. This type of connection allows the MCP server to push real-time updates and messages to the client without the need for the client to constantly poll for new information.
* SSE Server
+
Exposes the MCP server using the Server-Sent Events (SSE) transport. This allows MCP clients to establish persistent, one-way connections to this server to receive real-time updates and messages.


== Next Step

include::connectors::partial$t-index-partial.adoc[tags=next-step]

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[]
* xref:connectors::introduction/intro-config-use-acb.adoc[]
* xref:connectors::introduction/intro-config-use-studio.adoc[]
* xref:mcp-connector-reference.adoc[MCP Connector Reference]
* https://blogs.mulesoft.com/news/model-context-protocol/[MuleSoft MCP Support: Get Started With Model Context Protocol]
* https://modelcontextprotocol.io/introduction[Model Context Protocol]
* https://spec.modelcontextprotocol.io/specification/2024-11-05/basic/transports/#http-with-sse[HTTP With SSE]
* https://help.mulesoft.com[MuleSoft Help Center]
