mcp/1.0/modules/ROOT/pages/index.adoc
= MCP Connector 0.1.0-BETA - Mule 4
:lc-connector-name: mcp

Anypoint Connector for MCP (MCP Connector) uses the Model Context Protocol (MCP) to enable AI clients that support MCP to invoke and interact with APIs, connectors, and apps. 

[NOTE]
====
MCP Connector is a beta connector that is subject to the Beta Services Terms at https://www.salesforce.com/company/legal/agreements/[Agreements - Salesforce.com] or a written Unified Pilot Agreement if executed by Customer, and the Non-GA Gen AI and Non-GA Credit Consumption terms in the https://ptd.salesforce.com/?_ga=2.247987783.1372150065.1709219475-629000709.1639001992[Product Terms Directory]. Use of this beta connector with external systems or services consumes Mule messages and is at the Customer's sole discretion.

MCP Connector isn't available in Hyperforce regions Japan and Canada. 
====

Use MCP Connector to connect LLM applications with your APIs. APIs with complex endpoints can be exposed as simpler, more atomic tools or resources that are better suited for agentic clients. The key is to decide on what is straightforward, repeatable, and optimal for agent actions, and start there.

MCP is an open protocol that enables seamless integration between LLM applications and external data, services, and tools. MCP is a new standard allowing LLM and agent applications to communicate with each other (and with preexisting systems) in a consistent way. 

The MCP protocol: 

* Enhances AI precision by supplying AI with relevant information, leading to more accurate responses. 
* Empowers AI to manage intricate tasks that require access to external data or services.
* Promotes interoperability between AI models and external systems, simplifying integration into workflows.

MCP Connector:

* Makes Mule applications, connectors, and custom APIs available to AI clients, such as Claude, Cursor, and Windsurf, that support MCP. This enables you to rapidly and seamlessly build an agentic interface to expose Mule APIs to these clients.
* Enables you to write Mule apps that can act as both an MCP server and a client. The resulting Mule MCP server runs inside of Mule, which means you don’t need to configure your own hosting environment. Mule has your agentic needs covered end-to-end. 
** Acting as an MCP server, MuleSoft allows AI clients to leverage existing API-led investments, legacy systems, and SaaS applications that don’t natively support MCP.
** Acting as an MCP client, MuleSoft makes it possible to build integrations and orchestrations in which Agents are just another system in the choreography.
* Enables you to introduce AI agents into your existing Enterprise ecosystem using Mule as the orchestration layer. 
This makes the capabilities of your Mule APIs and applications available to a growing ecosystem of AI agents.

For information about compatibility and fixed issues, see the MCP Connector Release Notes.

== Before You Begin

To use this connector, you must be familiar with:

* Anypoint Connectors
* Mule runtime engine (Mule)
* Elements and global elements in a Mule flow
* How to create a Mule app using Anypoint Code Builder or Anypoint Studio

Before creating an app, you must have:

* Java 17
* Apache Maven
* Anypoint Platform
* Credentials to connect with the target resource
* The latest versions of Anypoint Code Builder or Anypoint Studio

== Common Use Cases for the Connector

These are some common use cases for the connector:

* Customer Service
+
Use AI agents to help human agents to be more efficient by handling time-intensive tasks like reviewing case histories, analyzing reported issues, and retrieving relevant information.
* Sales
+
Improve sales teams' success by accelerating prospect research, generating customized collateral, and preparing contracts.
* Marketing
+
Empower marketing teams with AI-driven support for drafting social media content, conducting market research, and analyzing campaign performance.

== Connection Types

* SSE Client
+
Enables MCP Connector to establish a persistent, one-way (server-sent) connection to an MCP server using the Server-Sent Events (SSE) standard. This type of connection allows the MCP server to push real-time updates and messages to the client without the need for the client to constantly poll for new information.
* SSE Server
+
Exposes the MCP server using the Server-Sent Events (SSE) transport. This allows MCP clients to establish persistent, one-way connections to this server to receive real-time updates and messages.

=== Authorization Types

The MCP protocol’s security is mostly based on the OAuth Authorization Code flow. To keep it compatible with different systems and uses, the connector also supports other authorization methods, including:

* OAuth Authorization Code
+
Used when the client is acting on behalf of an end user (human). For instance, an agent calls an MCP tool implemented by a SaaS system.
* OAuth Client Credentials
+
Used for machine-to-machine authentication. The client application authenticates itself directly with the authorization server using its client ID and client secret, and receives an access token.
This is used when an application is accessing resources on its own behalf, not on behalf of a user.
* Basic Auth
+
A simple (less secure) authentication scheme where the client sends the username and password in plain text (encoded in Base64) in the HTTP Authorization header.
* Digest
+
An HTTP authentication scheme that uses a challenge-response mechanism to avoid sending passwords in plain text. It involves hashing the password and other information to verify the client’s identity.
* NTLM
+
A Microsoft authentication protocol used primarily in Windows environments. It uses a challenge-response mechanism and is commonly used for network authentication.

Implementing other authentication patterns such as API Key is possible when you implement that logic into your flows, similar to what is normally done with connectors such as HTTP.



== Next Step

include::connectors::partial$t-index-partial.adoc[tags=next-step]

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[]
* xref:connectors::introduction/intro-config-use-acb.adoc[]
* xref:connectors::introduction/intro-config-use-studio.adoc[]
* xref:mcp-connector-reference.adoc[MCP Connector Reference]
* https://blogs.mulesoft.com/news/model-context-protocol/[MuleSoft MCP Support: Get Started With Model Context Protocol]
* https://modelcontextprotocol.io/introduction[Model Context Protocol]
* https://spec.modelcontextprotocol.io/specification/2024-11-05/basic/transports/#http-with-sse[HTTP With SSE]
* https://help.mulesoft.com[MuleSoft Help Center]
